<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".Ui.registerLogin.registerLogin.RegisterActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:progressTint="@color/purple_200"
        android:id="@+id/progress_bar_register"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainlayout_register"
        android:visibility="visible"
        android:background="@android:color/holo_blue_light"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"

            android:orientation="vertical">


            <EditText
                android:id="@+id/username_editText_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/email_edittext_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="20"
                android:hint="@string/email"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/password_edittext_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                />


            <Button
                android:id="@+id/registerButton_register"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/register" />

            <TextView
                android:id="@+id/already_have_account_text_view_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/already_have_an_account"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                />


        </LinearLayout>

    </ScrollView>









</RelativeLayout>